# pogocache

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yaml
.github/: dependabot.yaml
.github/workflows/: main.yml  operator-ci.yml  operator-release.yml
cmake/: CTestConfig.cmake  Config.cmake.in  MultiCPackConfig.cmake  README.txt  Welcome.txt  config.h.in
operator/: Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
operator/api/v1alpha1/: groupversion_info.go  pogocache_types.go  zz_generated.deepcopy.go
operator/config/: install.yaml
operator/config/crd/bases/: cache.pogocache.io_pogocacheinstances.yaml
operator/config/manager/: manager.yaml
operator/config/rbac/: role.yaml  role_binding.yaml  service_account.yaml
operator/config/samples/: cache_v1alpha1_pogocache.yaml
operator/controllers/: helpers_test.go  pogocache_controller.go  reconciler_test.go
src/: CMakeLists.txt  cmds.c  gitinfo.h.in  main.c  memcache.c  pogocache.c  postgres.c  save.c
tests/: CMakeLists.txt
